--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   image_picker: ^0.8.7+5
   path_provider: ^2.0.6
   url_launcher: ^6.0.0
+  http: ^0.13.6
+  flutter_stripe: ^9.2.1
+
+
 
 dev_dependencies:
   flutter_test:
